# Object-orientation-detection

./: CMakeLists.txt  README.md  mowito.cpp
